// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Snapshots > Button component disabled state > Button-disabled 1`] = `
<button
  aria-disabled="true"
  class="outline-hidden focus:outline-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange cursor-not-allowed opacity-70 transition-all duration-150"
  disabled=""
  type="button"
>
  Disabled button
</button>
`;

exports[`Component Snapshots > Button component renders correctly > Button-default 1`] = `
<button
  class="outline-hidden focus:outline-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange transition-all duration-150 hover:scale-[1.02] active:scale-[0.98]"
  type="button"
>
  Click me
</button>
`;

exports[`Component Snapshots > Input component renders correctly > Input-default 1`] = `
<div>
  <label
    class="pointer-events-none absolute left-[10px] z-10 bg-white px-1 text-[12px] italic transition-all duration-200 ease-out dark:bg-slate-800 top-[14px] text-gray-400 opacity-0 dark:text-gray-500"
    for="test"
  >
    Test input
  </label>
  <input
    aria-invalid="false"
    class="w-full rounded-xs border border-gray-300 dark:border-slate-600 bg-white dark:bg-slate-800 p-3 shadow-xs outline-hidden focus:border-gray-500 dark:focus:border-gray-400 dark:text-gray-100 dark:placeholder-gray-500 transition-colors duration-150"
    name="test"
    placeholder="Test input"
  />
  <div
    class="mt-1 min-h-5 text-sm text-red-600 dark:text-red-400"
  />
</div>
`;

exports[`Component Snapshots > Input component with error state > Input-error 1`] = `
<div>
  <label
    class="pointer-events-none absolute left-[10px] z-10 bg-white px-1 text-[12px] italic transition-all duration-200 ease-out dark:bg-slate-800 top-[14px] text-gray-400 opacity-0 dark:text-gray-500"
    for="test-error"
  >
    Test input
  </label>
  <input
    aria-describedby="test-error-error"
    aria-invalid="true"
    class="w-full rounded-xs border border-red-600 dark:border-slate-600 bg-white dark:bg-slate-800 p-3 shadow-xs outline-hidden focus:border-gray-500 dark:focus:border-gray-400 dark:text-gray-100 dark:placeholder-gray-500 transition-colors duration-150"
    name="test-error"
    placeholder="Test input"
  />
  <div
    class="mt-1 min-h-5 text-sm text-red-600 dark:text-red-400"
    id="test-error-error"
    style="opacity: 0; height: 0px; transform: translateY(-10px);"
  >
    This field is required
  </div>
</div>
`;

exports[`Component Snapshots > Pagination component renders correctly > Pagination-default 1`] = `
<nav
  aria-label="Pagination Navigation"
  class="mt-6 flex flex-wrap items-center justify-center"
  role="navigation"
>
  <span
    aria-disabled="true"
    aria-label="Trang trước"
    class="flex cursor-not-allowed items-center justify-center rounded-tl-sm rounded-bl-sm border-transparent px-2 py-2 opacity-40 transition-opacity duration-150 md:px-4 md:py-3"
  >
    <svg
      class="h-5 w-5 text-[rgba(0,0,0,0.6)] dark:text-gray-500"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.75 19.5L8.25 12l7.5-7.5"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <a
    aria-current="page"
    aria-label="Trang 1"
    class="flex cursor-pointer items-center justify-center px-2 py-2 text-sm transition-all duration-150 md:px-4 md:py-3 md:text-[18px] bg-orange text-white hover:bg-orange dark:bg-orange-500"
    data-discover="true"
    href="/?page=1&limit=20&sort_by=createdAt"
  >
    1
  </a>
  <a
    aria-label="Trang 2"
    class="flex cursor-pointer items-center justify-center px-2 py-2 text-sm transition-all duration-150 md:px-4 md:py-3 md:text-[18px] border-transparent text-black/50 hover:scale-110 hover:text-orange active:scale-95 dark:text-gray-400 dark:hover:text-orange-400"
    data-discover="true"
    href="/?page=2&limit=20&sort_by=createdAt"
  >
    2
  </a>
  <a
    aria-label="Trang 3"
    class="flex cursor-pointer items-center justify-center px-2 py-2 text-sm transition-all duration-150 md:px-4 md:py-3 md:text-[18px] border-transparent text-black/50 hover:scale-110 hover:text-orange active:scale-95 dark:text-gray-400 dark:hover:text-orange-400"
    data-discover="true"
    href="/?page=3&limit=20&sort_by=createdAt"
  >
    3
  </a>
  <span
    class="flex items-center justify-center border border-gray-200 bg-white px-2 py-2 text-sm shadow-xs md:px-3 md:py-3 md:text-base dark:border-slate-700 dark:bg-slate-800 dark:text-gray-300"
  >
    ...
  </span>
  <a
    aria-label="Trang 19"
    class="flex cursor-pointer items-center justify-center px-2 py-2 text-sm transition-all duration-150 md:px-4 md:py-3 md:text-[18px] border-transparent text-black/50 hover:scale-110 hover:text-orange active:scale-95 dark:text-gray-400 dark:hover:text-orange-400"
    data-discover="true"
    href="/?page=19&limit=20&sort_by=createdAt"
  >
    19
  </a>
  <a
    aria-label="Trang 20"
    class="flex cursor-pointer items-center justify-center px-2 py-2 text-sm transition-all duration-150 md:px-4 md:py-3 md:text-[18px] border-transparent text-black/50 hover:scale-110 hover:text-orange active:scale-95 dark:text-gray-400 dark:hover:text-orange-400"
    data-discover="true"
    href="/?page=20&limit=20&sort_by=createdAt"
  >
    20
  </a>
  <a
    aria-label="Go to next page"
    class="flex cursor-pointer items-center justify-center rounded-tr-sm rounded-br-sm border-transparent px-2 py-2 transition-all duration-150 hover:bg-black/5 active:scale-95 md:px-4 md:py-3 dark:hover:bg-white/10"
    data-discover="true"
    href="/?page=2&limit=20&sort_by=createdAt"
  >
    <svg
      class="h-5 w-5 text-[rgba(0,0,0,.6)] dark:text-gray-400"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.25 4.5l7.5 7.5-7.5 7.5"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </a>
</nav>
`;
